--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@splinetool/runtime": "^1.0.54",
-    "@splinetool/viewer": "^1.0.54",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@splinetool/runtime": "^1.0.67",
+    "@splinetool/viewer": "^1.0.67",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "scrollreveal": "^4.0.9",
     "swiper": "^11.0.6",
     "vue": "^3.4.19",
+    "vue-meta": "^3.0.0-alpha.8",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
