--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/scrollreveal": "^0.0.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
